test/bad/classes/type03.px

class A def
    x: Int

class B(A) def
    y: Int

b: [B] = [A()]
